--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.84.2",
+    "axios": "^1.11.0",
     "i18next": "^25.3.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.6.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
