--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.84.2",
     "axios": "^1.11.0",
+    "flag-icon-css": "^4.1.7",
     "i18next": "^25.3.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
