--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next": "^25.3.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
